<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="#F5F0F8"
        android:textSize="21dp"
        android:layout_marginTop="73dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DEMO"
        android:textColor="@color/titleColor"
        android:textSize="21dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:textColor="#AAA7C6"
        android:textSize="12dp"
        android:layout_marginTop="30dp"/>

    <RelativeLayout
        android:id="@+id/layout_handle_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="150dp"
            android:layout_height="134dp"
            android:background="@drawable/corners_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="35dp"
                android:background="@mipmap/ic_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/face_regiseter"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_manager"
            android:layout_width="150dp"
            android:layout_height="134dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@id/layout_register"
            android:background="@drawable/corners_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="35dp"
                android:background="@mipmap/ic_manager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/face_manager"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pass"
            android:layout_width="150dp"
            android:layout_height="134dp"
            android:layout_below="@id/layout_register"
            android:layout_marginRight="14dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/corners_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="35dp"
                android:background="@mipmap/ic_pass" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/pass"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_settings"
            android:layout_width="150dp"
            android:layout_height="134dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/corners_bg"
            android:layout_toRightOf="@id/layout_pass"
            android:layout_below="@id/layout_manager">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="35dp"
                android:background="@mipmap/ic_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/setting"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_camera"
        android:layout_width="313dp"
        android:layout_height="133dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/corners_bg"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_camera_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_fail"
            android:textColor="#FFFFFFFF"
            android:textSize="13dp"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="37dp"/>
        <TextView
            android:id="@+id/tv_camera_operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_operation"
            android:textColor="#AAA7C6"
            android:textSize="12dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="7dp"/>

    </LinearLayout>
</LinearLayout>